Changes since version 1.6-3

  * Function Ftest renamed to pwaldtest (there was never a CRAN release with Ftest
    exported, thus no deprecation warning).

Changes since version 1.6-2

  * pcdtest optimized for speed. 'preshape()' added to pcdtest.R to take care of reshaping in wide form
    prior to applying 'cor()'.

Changes since version 1.6-1

  * vcovG and vcovBK: added compliance with instrumental variables models (through two-parts formulae).
  * plm.Rd: added note on the intercept in 'fd' models, and how to eliminate it.
  * make.pbalanced: gained argument 'balance.type' which allows to select whether
    to balance by filling in NA values ("fill", like before) or (now new) also by
    keeping only time periods shared among all individuals ("shared").
  * pbsytest: issue warning when applied to an unbalanced model (unbalanced tests still in preparation).
  * print.summary.plm: for "between" models: print the no. of obs used in estimation
    (like for "fd" models since 1.5-24).
  * pcdtest:
      * returned htest object has correct data.name value now.
      * NaN stemming from non-intersecting periods or only one shared period of 
        pairs of individuals avoided by omission from calculation.
      * pcdtest(some_var ~ 1, data) does not error anymore.
  * NEWS file: order of entries changed: latest entries now at top of file.
  * pdim.pseries: added method.
  * is.pbalanced.*: methods added to determine balancedness for convenience. Same as pdim()$balanced,
    but avoids calculations performed by pdim() which are not necessary to determine (just) the
    balancedness.
  * some functions little more efficient by using is.pbalanced() instead of pdim()$balanced.


Changes since version 1.5-35

  * pbltest.plm: plm interface now respects the 'alternative' argument.
  * summary.plm: summary.plm objects gained new component 'df' to mimic summary.lm objects more closely.